# so_project

./: .gitignore  README.md
first_boot/src/: main.rs
first_bot/: Cargo.toml  README.md
second_boot/: Cargo.toml
second_bot/: Cargo.toml  README.md
second_bot/central_monitor/: Cargo.toml  README.md
second_bot/central_monitor/src/: main.rs
second_bot/central_monitor/src/cli/: menu.rs  mod.rs
second_bot/snapshot_agent/: Cargo.toml  README.md
third_bot/: Cargo.toml  README.md
third_bot/src/: fs_tree_bin.rs  main.rs
third_bot/src/pdf_processor/: mod.rs
third_bot/src/vm_map/: ext4.rs  fs_tree.rs  mod.rs
