[package]
name = "third_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
dirs = "4.0"
pdf-extract = "0.6"
shell-escape = "0.1.5"

[[bin]]
name = "fs_tree_bin"
path = "src/fs_tree_bin.rs"