[package]
name = "snapshot_agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snapshot_agent_linux"
path = "src/bin/linux.rs"

[[bin]]
name = "snapshot_agent_windows"
path = "src/bin/windows.rs"

[dependencies]
sysinfo = { version = "0.29", features = ["default", "multithread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0"
chrono = "0.4"
